// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render Badge correctly  1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FEF2E8",
            "bottom": 0,
            "color": "#F27A1A",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#F27A1A",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badge correctly when custom badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FEF2E8",
            "bottom": 0,
            "color": "#F27A1A",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#F27A1A",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badge correctly when default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FEF2E8",
            "bottom": 0,
            "color": "#F27A1A",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#F27A1A",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeBackground correctly when default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FEF2E8",
            "bottom": 0,
            "color": "#F27A1A",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#F27A1A",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeIcon correctly when custom badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFEEEC",
            "bottom": 0,
            "color": "#FF5043",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="blue"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="confetti"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4278190335,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M5.962 7.374a1.508 1.508 0 0 1 2.133-2.132l10.663 10.663a1.508 1.508 0 0 1-2.132 2.133L5.962 7.374Z"
          fill={
            Object {
              "type": 0,
              "value": 4278190335,
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="m7.029 6.308 10.663 10.663-14.628 6.827a2.153 2.153 0 0 1-2.862-2.861L7.029 6.307ZM9.364.14a.27.27 0 0 1 .472 0l.678 1.24a.269.269 0 0 0 .107.106l1.239.678a.27.27 0 0 1 0 .472l-1.24.678a.269.269 0 0 0-.106.107L9.836 4.66a.27.27 0 0 1-.472 0l-.678-1.24a.27.27 0 0 0-.107-.106L7.34 2.636a.27.27 0 0 1 0-.472l1.24-.678a.27.27 0 0 0 .106-.107L9.364.14ZM21.364 10.94a.27.27 0 0 1 .472 0l.678 1.24a.269.269 0 0 0 .107.106l1.239.678a.27.27 0 0 1 0 .472l-1.24.678a.269.269 0 0 0-.106.107l-.678 1.239a.27.27 0 0 1-.472 0l-.678-1.24a.269.269 0 0 0-.107-.106l-1.239-.678a.27.27 0 0 1 0-.472l1.24-.678a.269.269 0 0 0 .106-.107l.678-1.239ZM20.164.14a.27.27 0 0 1 .472 0l.678 1.24a.269.269 0 0 0 .107.106l1.239.678a.27.27 0 0 1 0 .472l-1.24.678a.269.269 0 0 0-.106.107l-.678 1.239a.27.27 0 0 1-.472 0l-.678-1.24a.269.269 0 0 0-.107-.106l-1.239-.678a.27.27 0 0 1 0-.472l1.24-.678a.269.269 0 0 0 .106-.107L20.164.14Z"
          fill={
            Object {
              "type": 0,
              "value": 4278190335,
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          clipRule={0}
          d="M14.4 2.4a1.2 1.2 0 0 1 1.2 1.2c0 4.152-1.722 7.019-2.752 8.049a1.2 1.2 0 1 1-1.697-1.698c.57-.57 2.049-2.823 2.049-6.351a1.2 1.2 0 0 1 1.2-1.2ZM24 7.2A1.2 1.2 0 0 0 22.8 6c-3.384 0-5.474 1.377-6.849 2.751a1.2 1.2 0 1 0 1.697 1.697C18.674 9.423 20.184 8.4 22.8 8.4A1.2 1.2 0 0 0 24 7.2Z"
          fill={
            Object {
              "type": 0,
              "value": 4278190335,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FF5043",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeIcon correctly when danger 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFEEEC",
            "bottom": 0,
            "color": "#FF5043",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FF5043"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="close-fill"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294922307,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0ZM7.293 7.293a1 1 0 0 1 1.414 0L12 10.586l3.293-3.293a1 1 0 1 1 1.414 1.414L13.414 12l3.293 3.293a1 1 0 0 1-1.414 1.414L12 13.414l-3.293 3.293a1 1 0 0 1-1.414-1.414L10.586 12 7.293 8.707a1 1 0 0 1 0-1.414Z"
          fill={
            Object {
              "type": 0,
              "value": 4294922307,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FF5043",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeIcon correctly when neutral 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#F1F2F7",
            "bottom": 0,
            "color": "#273142",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#273142"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="alert"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4280758594,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm-1.53 7.067A1 1 0 0 1 11.468 6h1.065a1 1 0 0 1 .997 1.067l-.4 6a1 1 0 0 1-.998.933h-.264a1 1 0 0 1-.998-.933l-.4-6ZM12 18a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
          fill={
            Object {
              "type": 0,
              "value": 4280758594,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#273142",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeIcon correctly when success 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#E7F9EF",
            "bottom": 0,
            "color": "#0BC15C",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#0BC15C"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="check-fill"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4278960476,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M24 12c0-6.627-5.373-12-12-12S0 5.373 0 12s5.373 12 12 12 12-5.373 12-12Zm-7.272-1.815a1 1 0 0 0-1.456-1.37l-4.92 5.226-1.624-1.726a1 1 0 0 0-1.456 1.37l2.353 2.5a1 1 0 0 0 1.456 0l5.647-6Z"
          fill={
            Object {
              "type": 0,
              "value": 4278960476,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#0BC15C",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeIcon correctly when warning 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFF8E6",
            "bottom": 0,
            "color": "#FFB600",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FFB600"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="warning"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294948352,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M14.643 2.544c-1.157-2.059-4.13-2.059-5.286 0L.391 18.506C-.74 20.518.719 23 3.033 23h17.934c2.314 0 3.773-2.482 2.643-4.494L14.643 2.544ZM12 7a1.5 1.5 0 0 0-1.5 1.5v5a1.5 1.5 0 0 0 3 0v-5A1.5 1.5 0 0 0 12 7Zm0 9a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
          fill={
            Object {
              "type": 0,
              "value": 4294948352,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FFB600",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeText correctly when custom badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFEEEC",
            "bottom": 0,
            "color": "#FF5043",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="blue"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="close-fill"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4278190335,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0ZM7.293 7.293a1 1 0 0 1 1.414 0L12 10.586l3.293-3.293a1 1 0 1 1 1.414 1.414L13.414 12l3.293 3.293a1 1 0 0 1-1.414 1.414L12 13.414l-3.293 3.293a1 1 0 0 1-1.414-1.414L10.586 12 7.293 8.707a1 1 0 0 1 0-1.414Z"
          fill={
            Object {
              "type": 0,
              "value": 4278190335,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FF5043",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeText correctly when danger 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFEEEC",
            "bottom": 0,
            "color": "#FF5043",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FF5043"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="fire"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294922307,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M15.513 20.657c-.953.875-2.214 1.351-3.554 1.343h-.002c-1.338-.011-2.591-.508-3.528-1.397-1.928-1.827-1.902-4.78.058-6.58l3.09-2.844a.697.697 0 0 1 .479-.179c.178.001.35.067.474.186l3.041 2.889c1.928 1.828 1.902 4.78-.058 6.582ZM13.046.393c-.56-.522-1.495-.522-2.076-.02a1.274 1.274 0 0 0-.453 1.05c.013.187.013.37.013.568 0 3.41-.943 5.425-1.463 5.924-.222-.221-.624-.803-.963-1.99-.132-.465-.528-.829-1.037-.954a1.578 1.578 0 0 0-1.425.35L4.199 6.644c-4.27 3.956-4.264 10.402.011 14.363 2.073 1.928 4.835 2.99 7.778 2.992H12c2.947 0 5.715-1.061 7.794-2.99 4.28-3.963 4.273-10.409-.012-14.362L13.046.394Z"
          fill={
            Object {
              "type": 0,
              "value": 4294922307,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FF5043",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeText correctly when default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FEF2E8",
            "bottom": 0,
            "color": "#F27A1A",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#F27A1A"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="fire"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294081050,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M15.513 20.657c-.953.875-2.214 1.351-3.554 1.343h-.002c-1.338-.011-2.591-.508-3.528-1.397-1.928-1.827-1.902-4.78.058-6.58l3.09-2.844a.697.697 0 0 1 .479-.179c.178.001.35.067.474.186l3.041 2.889c1.928 1.828 1.902 4.78-.058 6.582ZM13.046.393c-.56-.522-1.495-.522-2.076-.02a1.274 1.274 0 0 0-.453 1.05c.013.187.013.37.013.568 0 3.41-.943 5.425-1.463 5.924-.222-.221-.624-.803-.963-1.99-.132-.465-.528-.829-1.037-.954a1.578 1.578 0 0 0-1.425.35L4.199 6.644c-4.27 3.956-4.264 10.402.011 14.363 2.073 1.928 4.835 2.99 7.778 2.992H12c2.947 0 5.715-1.061 7.794-2.99 4.28-3.963 4.273-10.409-.012-14.362L13.046.394Z"
          fill={
            Object {
              "type": 0,
              "value": 4294081050,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#F27A1A",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeText correctly when neutral 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#F1F2F7",
            "bottom": 0,
            "color": "#273142",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#273142"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="fire"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4280758594,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M15.513 20.657c-.953.875-2.214 1.351-3.554 1.343h-.002c-1.338-.011-2.591-.508-3.528-1.397-1.928-1.827-1.902-4.78.058-6.58l3.09-2.844a.697.697 0 0 1 .479-.179c.178.001.35.067.474.186l3.041 2.889c1.928 1.828 1.902 4.78-.058 6.582ZM13.046.393c-.56-.522-1.495-.522-2.076-.02a1.274 1.274 0 0 0-.453 1.05c.013.187.013.37.013.568 0 3.41-.943 5.425-1.463 5.924-.222-.221-.624-.803-.963-1.99-.132-.465-.528-.829-1.037-.954a1.578 1.578 0 0 0-1.425.35L4.199 6.644c-4.27 3.956-4.264 10.402.011 14.363 2.073 1.928 4.835 2.99 7.778 2.992H12c2.947 0 5.715-1.061 7.794-2.99 4.28-3.963 4.273-10.409-.012-14.362L13.046.394Z"
          fill={
            Object {
              "type": 0,
              "value": 4280758594,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#273142",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeText correctly when success 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#E7F9EF",
            "bottom": 0,
            "color": "#0BC15C",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#0BC15C"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="fire"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4278960476,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M15.513 20.657c-.953.875-2.214 1.351-3.554 1.343h-.002c-1.338-.011-2.591-.508-3.528-1.397-1.928-1.827-1.902-4.78.058-6.58l3.09-2.844a.697.697 0 0 1 .479-.179c.178.001.35.067.474.186l3.041 2.889c1.928 1.828 1.902 4.78-.058 6.582ZM13.046.393c-.56-.522-1.495-.522-2.076-.02a1.274 1.274 0 0 0-.453 1.05c.013.187.013.37.013.568 0 3.41-.943 5.425-1.463 5.924-.222-.221-.624-.803-.963-1.99-.132-.465-.528-.829-1.037-.954a1.578 1.578 0 0 0-1.425.35L4.199 6.644c-4.27 3.956-4.264 10.402.011 14.363 2.073 1.928 4.835 2.99 7.778 2.992H12c2.947 0 5.715-1.061 7.794-2.99 4.28-3.963 4.273-10.409-.012-14.362L13.046.394Z"
          fill={
            Object {
              "type": 0,
              "value": 4278960476,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#0BC15C",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render badgeText correctly when warning 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFF8E6",
            "bottom": 0,
            "color": "#FFB600",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FFB600"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="fire"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294948352,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M15.513 20.657c-.953.875-2.214 1.351-3.554 1.343h-.002c-1.338-.011-2.591-.508-3.528-1.397-1.928-1.827-1.902-4.78.058-6.58l3.09-2.844a.697.697 0 0 1 .479-.179c.178.001.35.067.474.186l3.041 2.889c1.928 1.828 1.902 4.78-.058 6.582ZM13.046.393c-.56-.522-1.495-.522-2.076-.02a1.274 1.274 0 0 0-.453 1.05c.013.187.013.37.013.568 0 3.41-.943 5.425-1.463 5.924-.222-.221-.624-.803-.963-1.99-.132-.465-.528-.829-1.037-.954a1.578 1.578 0 0 0-1.425.35L4.199 6.644c-4.27 3.956-4.264 10.402.011 14.363 2.073 1.928 4.835 2.99 7.778 2.992H12c2.947 0 5.715-1.061 7.794-2.99 4.28-3.963 4.273-10.409-.012-14.362L13.046.394Z"
          fill={
            Object {
              "type": 0,
              "value": 4294948352,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FFB600",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render correctly only icon badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="purple"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="confetti"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4286578816,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M5.962 7.374a1.508 1.508 0 0 1 2.133-2.132l10.663 10.663a1.508 1.508 0 0 1-2.132 2.133L5.962 7.374Z"
          fill={
            Object {
              "type": 0,
              "value": 4286578816,
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="m7.029 6.308 10.663 10.663-14.628 6.827a2.153 2.153 0 0 1-2.862-2.861L7.029 6.307ZM9.364.14a.27.27 0 0 1 .472 0l.678 1.24a.269.269 0 0 0 .107.106l1.239.678a.27.27 0 0 1 0 .472l-1.24.678a.269.269 0 0 0-.106.107L9.836 4.66a.27.27 0 0 1-.472 0l-.678-1.24a.27.27 0 0 0-.107-.106L7.34 2.636a.27.27 0 0 1 0-.472l1.24-.678a.27.27 0 0 0 .106-.107L9.364.14ZM21.364 10.94a.27.27 0 0 1 .472 0l.678 1.24a.269.269 0 0 0 .107.106l1.239.678a.27.27 0 0 1 0 .472l-1.24.678a.269.269 0 0 0-.106.107l-.678 1.239a.27.27 0 0 1-.472 0l-.678-1.24a.269.269 0 0 0-.107-.106l-1.239-.678a.27.27 0 0 1 0-.472l1.24-.678a.269.269 0 0 0 .106-.107l.678-1.239ZM20.164.14a.27.27 0 0 1 .472 0l.678 1.24a.269.269 0 0 0 .107.106l1.239.678a.27.27 0 0 1 0 .472l-1.24.678a.269.269 0 0 0-.106.107l-.678 1.239a.27.27 0 0 1-.472 0l-.678-1.24a.269.269 0 0 0-.107-.106l-1.239-.678a.27.27 0 0 1 0-.472l1.24-.678a.269.269 0 0 0 .106-.107L20.164.14Z"
          fill={
            Object {
              "type": 0,
              "value": 4286578816,
            }
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          clipRule={0}
          d="M14.4 2.4a1.2 1.2 0 0 1 1.2 1.2c0 4.152-1.722 7.019-2.752 8.049a1.2 1.2 0 1 1-1.697-1.698c.57-.57 2.049-2.823 2.049-6.351a1.2 1.2 0 0 1 1.2-1.2ZM24 7.2A1.2 1.2 0 0 0 22.8 6c-3.384 0-5.474 1.377-6.849 2.751a1.2 1.2 0 1 0 1.697 1.697C18.674 9.423 20.184 8.4 22.8 8.4A1.2 1.2 0 0 0 24 7.2Z"
          fill={
            Object {
              "type": 0,
              "value": 4286578816,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Badge should render correctly only text badge 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFF8E6",
            "bottom": 0,
            "color": "#FFB600",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FFB600"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="warning"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294948352,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M14.643 2.544c-1.157-2.059-4.13-2.059-5.286 0L.391 18.506C-.74 20.518.719 23 3.033 23h17.934c2.314 0 3.773-2.482 2.643-4.494L14.643 2.544ZM12 7a1.5 1.5 0 0 0-1.5 1.5v5a1.5 1.5 0 0 0 3 0v-5A1.5 1.5 0 0 0 12 7Zm0 9a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
          fill={
            Object {
              "type": 0,
              "value": 4294948352,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FFB600",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem ipsum dolor sit amet
  </Text>
</View>
`;

exports[`Badge should render fontSize correctly when large 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFF8E6",
            "bottom": 0,
            "color": "#FFB600",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FFB600"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="warning"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294948352,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M14.643 2.544c-1.157-2.059-4.13-2.059-5.286 0L.391 18.506C-.74 20.518.719 23 3.033 23h17.934c2.314 0 3.773-2.482 2.643-4.494L14.643 2.544ZM12 7a1.5 1.5 0 0 0-1.5 1.5v5a1.5 1.5 0 0 0 3 0v-5A1.5 1.5 0 0 0 12 7Zm0 9a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
          fill={
            Object {
              "type": 0,
              "value": 4294948352,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FFB600",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 14,
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render fontSize correctly when medium 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFF8E6",
            "bottom": 0,
            "color": "#FFB600",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FFB600"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="warning"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294948352,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M14.643 2.544c-1.157-2.059-4.13-2.059-5.286 0L.391 18.506C-.74 20.518.719 23 3.033 23h17.934c2.314 0 3.773-2.482 2.643-4.494L14.643 2.544ZM12 7a1.5 1.5 0 0 0-1.5 1.5v5a1.5 1.5 0 0 0 3 0v-5A1.5 1.5 0 0 0 12 7Zm0 9a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
          fill={
            Object {
              "type": 0,
              "value": 4294948352,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FFB600",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 12,
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Badge should render fontSize correctly when small 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "borderRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
  testID="badge"
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "backgroundColor": "#FFF8E6",
            "bottom": 0,
            "color": "#FFB600",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ],
      ]
    }
    testID="badgeBackground"
  />
  <View
    style={
      Array [
        Object {
          "paddingLeft": 4,
          "paddingRight": 0,
          "paddingVertical": 4,
        },
      ]
    }
    testID="badgeIconBox"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="14"
      bbWidth="14"
      fill="#FFB600"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      testID="badgeIcon"
      title="warning"
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={
          Object {
            "type": 0,
            "value": 4294948352,
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M14.643 2.544c-1.157-2.059-4.13-2.059-5.286 0L.391 18.506C-.74 20.518.719 23 3.033 23h17.934c2.314 0 3.773-2.482 2.643-4.494L14.643 2.544ZM12 7a1.5 1.5 0 0 0-1.5 1.5v5a1.5 1.5 0 0 0 3 0v-5A1.5 1.5 0 0 0 12 7Zm0 9a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"
          fill={
            Object {
              "type": 0,
              "value": 4294948352,
            }
          }
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <Text
    accessible={true}
    style={
      Array [
        Object {
          "color": "#FFB600",
          "fontFamily": "Rubik-Regular",
          "fontSize": 14,
          "fontWeight": "500",
        },
        Array [
          Object {
            "fontSize": 10,
            "paddingHorizontal": 4,
            "paddingVertical": 2,
          },
        ],
      ]
    }
    testID="badgeText"
  >
    Lorem Ipsum
  </Text>
</View>
`;
